Organized PProfiling ipynb

--- a/8_Groupings/What_are_means_by_region.ipynb
+++ b/8_Groupings/What_are_means_by_region.ipynb
@@ -1,30 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Groupings\" data-toc-modified-id=\"Groupings-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Groupings</a></span></li><li><span><a href=\"#Grouping-#1-by-Region\" data-toc-modified-id=\"Grouping-#1-by-Region-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Grouping #1 by Region</a></span></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
-    "## Groupings\n",
+    "## What are the 'means' by region\n",
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
-    "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
+    "From: Matt Curcio, matt.curcio.us@gmail.com\n",
     "\n",
     "Date: 2023-01-29\n",
     "\n",
-    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #9\n",
+    "Re:&nbsp;&nbsp;&nbsp; SEE: https://www.python-graph-gallery.com/parallel-plot/\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Executuve Summary\n",
+    "\n",
     "\n",
     "---\n"
    ]
@@ -503,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
