Culled 2 Modeling ipynb

--- a/7_Models/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/7_Models/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -45,23 +45,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean_LE_Data_FEng_4.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls *.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -98,8 +81,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Clean_LE_Data_FEng_4.csv', header=0) # Drop Index Column\n",
-    "df.info()"
+    "path = '../data/processed/'\n",
+    "fileName = 'Clean_LE_Data_FEng_4.csv'\n",
+    "\n",
+    "df = pd.read_csv(path+fileName, header=0)"
    ]
   },
   {
@@ -165,10 +150,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$Life~Expectancy = 50.7 + ~9.1 \\cdot Income + 0.90 \\cdot Education + 0.04 \\cdot Polio + 0.04 \\cdot DTP - 0.02 \\cdot Adult~Mortality - 0.48 \\cdot HIV$$"
+    "$$Life~Expectancy = 50.7 \\\\+ ~9.1 \\cdot Income \\\\+ 0.90 \\cdot Education \\\\+ 0.04 \\cdot Polio \\\\+ 0.04 \\cdot DTP \\\\- 0.02 \\cdot Adult~Mortality \\\\- 0.48 \\cdot HIV$$"
    ]
   },
   {
