--- a/notebooks/Feature_Engineering_catgorize_nations_2_Named_regions.ipynb
+++ b/notebooks/Feature_Engineering_catgorize_nations_2_Named_regions.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "bb04b6d3",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "2026d29a",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fe010053",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "378d56e9",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "ad31034c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "81729892",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "8f56d73b",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "1b9bcb09",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "8696b3ad",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "6f7c31a6",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "3c285567",
    "metadata": {},
    "outputs": [
@@ -321,17 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "8dc95b6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 5, 7, 8, 3, 6, 1, 4])"
+       "array(['N_Africa', 'Europe', 'Sub_Sahara', 'CAmerica_Caribbean',\n",
+       "       'S_America', 'Oceania', 'Asia', 'N_America'], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "a89f5a3b",
    "metadata": {},
    "outputs": [
@@ -423,7 +424,7 @@
        "      <td>9.4</td>\n",
        "      <td>0.407</td>\n",
        "      <td>9.2</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Sub_Sahara</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2924</th>\n",
@@ -446,7 +447,7 @@
        "      <td>9.9</td>\n",
        "      <td>0.418</td>\n",
        "      <td>9.5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Sub_Sahara</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2925</th>\n",
@@ -469,7 +470,7 @@
        "      <td>1.3</td>\n",
        "      <td>0.427</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Sub_Sahara</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2926</th>\n",
@@ -492,7 +493,7 @@
        "      <td>1.7</td>\n",
        "      <td>0.427</td>\n",
        "      <td>9.8</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Sub_Sahara</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2927</th>\n",
@@ -515,7 +516,7 @@
        "      <td>11.2</td>\n",
        "      <td>0.434</td>\n",
        "      <td>9.8</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Sub_Sahara</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -536,15 +537,15 @@
        "2926        0.0      529  25.9     39   76.0        6.16  75.0  42.1   \n",
        "2927        0.0     1483  25.5     39   78.0        7.10  78.0  43.5   \n",
        "\n",
-       "      Thin1_19y  Thin5_9y  Income  Education  Region  \n",
-       "2923        9.4       9.4   0.407        9.2       7  \n",
-       "2924        9.8       9.9   0.418        9.5       7  \n",
-       "2925        1.2       1.3   0.427       10.0       7  \n",
-       "2926        1.6       1.7   0.427        9.8       7  \n",
-       "2927       11.0      11.2   0.434        9.8       7  "
+       "      Thin1_19y  Thin5_9y  Income  Education      Region  \n",
+       "2923        9.4       9.4   0.407        9.2  Sub_Sahara  \n",
+       "2924        9.8       9.9   0.418        9.5  Sub_Sahara  \n",
+       "2925        1.2       1.3   0.427       10.0  Sub_Sahara  \n",
+       "2926        1.6       1.7   0.427        9.8  Sub_Sahara  \n",
+       "2927       11.0      11.2   0.434        9.8  Sub_Sahara  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
