Renamed completed ipynb

--- a/notebooks/2_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Initial_Data_Analysis.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "656d8c75",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "06115e7f",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "(2938, 22)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4cab4dae",
    "metadata": {
     "scrolled": false
@@ -142,7 +142,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bf72eff3",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d0e4a1bd",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4710c8ef",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "cbd80604",
    "metadata": {},
    "outputs": [],
@@ -303,8 +303,9 @@
     "df['Income'].fillna(np.mean(df.Income), inplace=True)\n",
     "df['Education'].fillna(np.mean(df.Education), inplace=True)\n",
     "\n",
+    "# REFACTORED to use original strings for status\n",
     "# Convert Dev status to a binary variable, where Developing Nations = 0, Developed Nation status = 1.\n",
-    "df['Status'] = df['Status'].apply(lambda x: 0 if x == 'Developing' else 1).astype('int8')"
+    "# df['Status'] = df['Status'].apply(lambda x: 0 if x == 'Developing' else 1).astype('category')"
    ]
   },
   {
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0190a1e6",
    "metadata": {},
    "outputs": [
@@ -354,7 +355,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,13 +376,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c0f4a104",
    "metadata": {},
    "outputs": [],
    "source": [
     "path = '../data/processed/'\n",
-    "fileName = 'Clean_LE_Data_w_Means_2.csv'\n",
+    "fileName = 'Clean_LE_Data_w_Means_1.csv'\n",
     "\n",
     "df.to_csv(path+fileName, index=False)"
    ]
