Added LE graphic

--- a/notebooks/7_Plotly_Life_Expectancy_183_countries.ipynb
+++ b/notebooks/7_Plotly_Life_Expectancy_183_countries.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "712c7bc9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "b910614d",
    "metadata": {},
    "outputs": [
@@ -63,33 +63,33 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2938 entries, 0 to 2937\n",
       "Data columns (total 23 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   Country     2938 non-null   object \n",
-      " 1   Year        2938 non-null   int64  \n",
-      " 2   Status      2938 non-null   int64  \n",
-      " 3   LifeExpec   2938 non-null   float64\n",
-      " 4   AdultMort   2938 non-null   float64\n",
-      " 5   InfD        2938 non-null   int64  \n",
-      " 6   EtOH        2938 non-null   float64\n",
-      " 7   PercExpen   2938 non-null   float64\n",
-      " 8   HepB        2938 non-null   float64\n",
-      " 9   Measles     2938 non-null   int64  \n",
-      " 10  BMI         2938 non-null   float64\n",
-      " 11  lt5yD       2938 non-null   int64  \n",
-      " 12  Polio       2938 non-null   float64\n",
-      " 13  TotalExpen  2938 non-null   float64\n",
-      " 14  Diph        2938 non-null   float64\n",
-      " 15  HIV/AIDS    2938 non-null   float64\n",
-      " 16  GDP         2938 non-null   float64\n",
-      " 17  Population  2938 non-null   float64\n",
-      " 18  Thin1_19y   2938 non-null   float64\n",
-      " 19  Thin5_9y    2938 non-null   float64\n",
-      " 20  Income      2938 non-null   float64\n",
-      " 21  Education   2938 non-null   float64\n",
-      " 22  Region      2938 non-null   object \n",
-      "dtypes: float64(16), int64(5), object(2)\n",
-      "memory usage: 528.0+ KB\n"
+      " #   Column      Non-Null Count  Dtype   \n",
+      "---  ------      --------------  -----   \n",
+      " 0   Country     2938 non-null   category\n",
+      " 1   Year        2938 non-null   int64   \n",
+      " 2   Status      2938 non-null   category\n",
+      " 3   LifeExpec   2938 non-null   float64 \n",
+      " 4   AdultMort   2938 non-null   float64 \n",
+      " 5   InfD        2938 non-null   int64   \n",
+      " 6   EtOH        2938 non-null   float64 \n",
+      " 7   PercExpen   2938 non-null   float64 \n",
+      " 8   HepB        2938 non-null   float64 \n",
+      " 9   Measles     2938 non-null   int64   \n",
+      " 10  BMI         2938 non-null   float64 \n",
+      " 11  lt5yD       2938 non-null   int64   \n",
+      " 12  Polio       2938 non-null   float64 \n",
+      " 13  TotalExpen  2938 non-null   float64 \n",
+      " 14  Diph        2938 non-null   float64 \n",
+      " 15  HIV/AIDS    2938 non-null   float64 \n",
+      " 16  GDP         2938 non-null   float64 \n",
+      " 17  Population  2938 non-null   float64 \n",
+      " 18  Thin1_19y   2938 non-null   float64 \n",
+      " 19  Thin5_9y    2938 non-null   float64 \n",
+      " 20  Income      2938 non-null   float64 \n",
+      " 21  Education   2938 non-null   float64 \n",
+      " 22  Region      2938 non-null   category\n",
+      "dtypes: category(3), float64(16), int64(4)\n",
+      "memory usage: 476.7 KB\n"
      ]
     }
    ],
@@ -99,12 +99,17 @@
     "\n",
     "df = pd.read_csv(path+filename)\n",
     "\n",
+    "# Convert vars to categorical\n",
+    "df['Country'] = pd.Categorical(df['Country'])\n",
+    "df['Status'] = pd.Categorical(df['Status'])\n",
+    "df['Region'] = pd.Categorical(df['Region'])\n",
+    "\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "266761ec",
    "metadata": {},
    "outputs": [],
@@ -115,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "fe9cb9cb",
    "metadata": {},
    "outputs": [],
@@ -124,12 +129,12 @@
     "df_country_mean = df.groupby(['Country']).mean()\n",
     "\n",
     "#sort by Life Expectancy THEN Country-alphabetically\n",
-    "df_country_sort = df_country_mean.sort_values(by = ['LifeExpec', 'Country'])"
+    "df_country_sort = df_country_mean.sort_values(by = ['LifeExpec'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "4c91c8dd",
    "metadata": {
     "scrolled": false
@@ -144,10 +149,205 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "LifeExpec=%{x}<br>Country=%{y}<extra></extra>",
+         "hovertemplate": "LifeExpec=%{marker.color}<br>Country=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
-          "color": "#636efa",
+          "color": [
+           46.1125,
+           48.5125,
+           48.78125,
+           49.01875,
+           49.89375,
+           50.3875,
+           50.3875,
+           50.4875,
+           51.325,
+           51.35625,
+           53.31875,
+           53.39375,
+           53.875,
+           53.90625,
+           54.01875,
+           54.9375,
+           55.3125,
+           55.36875,
+           55.5375,
+           55.64375,
+           55.6875,
+           55.70625,
+           56.00625,
+           56.0125,
+           56.05,
+           56.6625,
+           56.98125,
+           57.48125,
+           57.5,
+           57.525,
+           57.56875,
+           58.19375,
+           59.04375,
+           59.1125,
+           59.3125,
+           59.4625,
+           59.86875,
+           60.4,
+           60.6875,
+           60.75625,
+           60.8625,
+           61.58125,
+           61.68125,
+           61.825,
+           62.24375,
+           62.38125,
+           62.56875,
+           62.74375,
+           62.8,
+           63.8625,
+           64.2,
+           64.34375,
+           64.5,
+           64.61874999999999,
+           64.75625,
+           65.15,
+           65.1625,
+           65.41875,
+           65.6375,
+           65.8875,
+           66.1625,
+           66.48125,
+           66.65625,
+           66.7625,
+           67.55625,
+           67.575,
+           67.70625,
+           67.7125,
+           67.7625,
+           68.03125,
+           68.2,
+           68.7125,
+           69.08125,
+           69.19375,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.22493169398912,
+           69.26875,
+           69.3,
+           69.90625,
+           69.9375,
+           69.98125,
+           70.08125,
+           70.35625,
+           70.73125,
+           70.85,
+           71.06875,
+           71.3875,
+           71.5,
+           71.73125,
+           71.74375,
+           72.15625,
+           72.34375,
+           72.375,
+           72.4875,
+           72.51875,
+           72.53125,
+           72.7125,
+           72.80625,
+           72.85,
+           72.9875,
+           72.99375,
+           73.08125,
+           73.1125,
+           73.2875,
+           73.29375,
+           73.38125,
+           73.3875,
+           73.4,
+           73.4,
+           73.45,
+           73.46875,
+           73.475,
+           73.50625000000001,
+           73.6,
+           73.61875,
+           73.61875,
+           73.6625,
+           73.73125,
+           73.75625,
+           73.825,
+           73.84375,
+           73.85625,
+           73.9125,
+           73.95625,
+           74.05,
+           74.1125,
+           74.2,
+           74.2625,
+           74.2875,
+           74.29375,
+           74.35625,
+           74.35625,
+           74.5,
+           74.725,
+           74.75,
+           74.775,
+           74.84375,
+           74.94375,
+           75.05625,
+           75.15625,
+           75.15625,
+           75.5375,
+           75.65,
+           75.7,
+           75.71875,
+           75.725,
+           75.96875,
+           76.075,
+           76.11875,
+           76.4875,
+           76.4875,
+           76.76875,
+           77.03125,
+           77.975,
+           78.0625,
+           78.59375,
+           79.25625,
+           79.45,
+           79.675,
+           79.73125,
+           79.99375,
+           80.15,
+           80.3625,
+           80.4875,
+           80.68125,
+           80.7125,
+           80.78125,
+           80.79375,
+           81.13125,
+           81.175,
+           81.21875,
+           81.3,
+           81.3375,
+           81.475,
+           81.48125,
+           81.6875,
+           81.79375,
+           81.8125,
+           82.06875,
+           82.1875,
+           82.21875,
+           82.33125,
+           82.44375,
+           82.51875,
+           82.5375
+          ],
+          "coloraxis": "coloraxis",
           "pattern": {
            "shape": ""
           }
@@ -429,16 +629,16 @@
           "Fiji",
           "Kyrgyzstan",
           "Democratic People's Republic of Korea",
-          "Cook Islands",
-          "Dominica",
-          "Marshall Islands",
-          "Monaco",
-          "Nauru",
           "Niue",
-          "Palau",
+          "Monaco",
+          "Marshall Islands",
+          "Nauru",
           "Saint Kitts and Nevis",
+          "Cook Islands",
           "San Marino",
           "Tuvalu",
+          "Dominica",
+          "Palau",
           "Belize",
           "Bangladesh",
           "Belarus",
@@ -477,8 +677,8 @@
           "Saint Vincent and the Grenadines",
           "Georgia",
           "Saint Lucia",
-          "Algeria",
           "Samoa",
+          "Algeria",
           "Peru",
           "Latvia",
           "Malaysia",
@@ -493,8 +693,8 @@
           "China",
           "Bahamas",
           "Jamaica",
-          "Barbados",
           "Tunisia",
+          "Barbados",
           "Montenegro",
           "Ecuador",
           "Slovakia",
@@ -502,8 +702,8 @@
           "Oman",
           "Estonia",
           "Antigua and Barbuda",
-          "Albania",
           "Argentina",
+          "Albania",
           "Maldives",
           "Poland",
           "United Arab Emirates",
@@ -512,8 +712,8 @@
           "Bosnia and Herzegovina",
           "Uruguay",
           "Croatia",
-          "Brunei Darussalam",
           "Panama",
+          "Brunei Darussalam",
           "Czechia",
           "Qatar",
           "Cuba",
@@ -554,7 +754,56 @@
        ],
        "layout": {
         "barmode": "relative",
-        "height": 3000,
+        "coloraxis": {
+         "colorbar": {
+          "title": {
+           "text": "LifeExpec"
+          }
+         },
+         "colorscale": [
+          [
+           0,
+           "#0d0887"
+          ],
+          [
+           0.1111111111111111,
+           "#46039f"
+          ],
+          [
+           0.2222222222222222,
+           "#7201a8"
+          ],
+          [
+           0.3333333333333333,
+           "#9c179e"
+          ],
+          [
+           0.4444444444444444,
+           "#bd3786"
+          ],
+          [
+           0.5555555555555556,
+           "#d8576b"
+          ],
+          [
+           0.6666666666666666,
+           "#ed7953"
+          ],
+          [
+           0.7777777777777778,
+           "#fb9f3a"
+          ],
+          [
+           0.8888888888888888,
+           "#fdca26"
+          ],
+          [
+           1,
+           "#f0f921"
+          ]
+         ]
+        },
+        "height": 1000,
         "legend": {
          "tracegroupgap": 0
         },
@@ -1405,15 +1654,16 @@
     }
    ],
    "source": [
+    "path = '../assets/'\n",
+    "\n",
     "fig = px.bar(df_country_sort, \n",
     "             x=\"LifeExpec\",  \n",
-    "             orientation='h',\n",
-    "             height=3000,\n",
+    "             color='LifeExpec',\n",
+    "             height=1000,\n",
     "             title='Living Well: Life Expectancy By Country')\n",
     "fig.show()\n",
     "\n",
-    "#plt.savefig('Life_Expectancy_By_Country.svg')\n",
-    "#fig.savefig('Life_Expectancy_By_Country.svg', format='svg', dpi=1200)"
+    "fig.write_html(path+'Life_Expectancy_By_Country.svg')\n"
    ]
   }
  ],
