Added GDP data & folder

--- a/notebooks/2_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Initial_Data_Analysis.ipynb
@@ -22,6 +22,12 @@
     "\n",
     "## Executive Summary\n",
     "\n",
+    "# TO DO\n",
+    "add where the data is from? \n",
+    "What website?\n",
+    "Any background\n",
+    "\n",
+    "\n",
     "Purpose: This notebook investigates *missing values, renames features, and imputes missing values by column mean*.\n",
     "\n",
     "Input: `Life_Expectancy_Data.csv`\n",
