--- a/notebooks/6a_Feature_Engineering_catgorize_nations_2_Named_regions.ipynb
+++ b/notebooks/6a_Feature_Engineering_catgorize_nations_2_Named_regions.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## Excutive Summary\n",
     "\n",
-    "This notebook simply bins 183 countries into 8 (subjective) regions.\n",
+    "This notebook simply bins 183 countries into 8 (subjective) regions, ala **Feature Engineering**\n",
     "\n",
     "This notebook, aligns with the Linux philosphy that programs should do one thing, lol\n",
     "\n",
@@ -40,9 +40,9 @@
     "\n",
     "- This file utilizes:\n",
     "  \n",
-    "  Input: `Clean_LE_Data_Post_EDA_3.csv` \n",
+    "  Input: `Clean_LE_Data_Post_Correlation_2.csv` \n",
     "\n",
-    "  Output: `Clean_LE_Regions.csv`\n"
+    "  Output: `.csv`\n"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "path = '../data/processed/'\n",
-    "filename = 'Clean_LE_Data_w_Means_2.csv'\n",
+    "filename = 'Clean_LE_Data_Post_Correlation_2.csv'\n",
     "\n",
     "df = pd.read_csv(path+filename, header=0)"
    ]
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "378d56e9",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ad31034c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "81729892",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8f56d73b",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1b9bcb09",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8696b3ad",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6f7c31a6",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3c285567",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8dc95b6f",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "       'S_America', 'Oceania', 'Asia', 'N_America'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "a89f5a3b",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,6 @@
        "      <th>Status</th>\n",
        "      <th>LifeExpectancy</th>\n",
        "      <th>AdultMort</th>\n",
-       "      <th>InfD</th>\n",
        "      <th>EtOH</th>\n",
        "      <th>PercExpen</th>\n",
        "      <th>Measles</th>\n",
@@ -396,7 +395,6 @@
        "      <th>DTP</th>\n",
        "      <th>HIV</th>\n",
        "      <th>Thin1_19y</th>\n",
-       "      <th>Thin5_9y</th>\n",
        "      <th>Income</th>\n",
        "      <th>Education</th>\n",
        "      <th>Region</th>\n",
@@ -407,10 +405,9 @@
        "      <th>2923</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2004</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Developing</td>\n",
        "      <td>44.3</td>\n",
        "      <td>723.0</td>\n",
-       "      <td>27</td>\n",
        "      <td>4.36</td>\n",
        "      <td>0.0</td>\n",
        "      <td>31</td>\n",
@@ -421,7 +418,6 @@
        "      <td>65.0</td>\n",
        "      <td>33.6</td>\n",
        "      <td>9.4</td>\n",
-       "      <td>9.4</td>\n",
        "      <td>0.407</td>\n",
        "      <td>9.2</td>\n",
        "      <td>Sub_Sahara</td>\n",
@@ -430,10 +426,9 @@
        "      <th>2924</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2003</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Developing</td>\n",
        "      <td>44.5</td>\n",
        "      <td>715.0</td>\n",
-       "      <td>26</td>\n",
        "      <td>4.06</td>\n",
        "      <td>0.0</td>\n",
        "      <td>998</td>\n",
@@ -444,7 +439,6 @@
        "      <td>68.0</td>\n",
        "      <td>36.7</td>\n",
        "      <td>9.8</td>\n",
-       "      <td>9.9</td>\n",
        "      <td>0.418</td>\n",
        "      <td>9.5</td>\n",
        "      <td>Sub_Sahara</td>\n",
@@ -453,10 +447,9 @@
        "      <th>2925</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2002</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Developing</td>\n",
        "      <td>44.8</td>\n",
        "      <td>73.0</td>\n",
-       "      <td>25</td>\n",
        "      <td>4.43</td>\n",
        "      <td>0.0</td>\n",
        "      <td>304</td>\n",
@@ -467,7 +460,6 @@
        "      <td>71.0</td>\n",
        "      <td>39.8</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>1.3</td>\n",
        "      <td>0.427</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Sub_Sahara</td>\n",
@@ -476,10 +468,9 @@
        "      <th>2926</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2001</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Developing</td>\n",
        "      <td>45.3</td>\n",
        "      <td>686.0</td>\n",
-       "      <td>25</td>\n",
        "      <td>1.72</td>\n",
        "      <td>0.0</td>\n",
        "      <td>529</td>\n",
@@ -490,7 +481,6 @@
        "      <td>75.0</td>\n",
        "      <td>42.1</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>1.7</td>\n",
        "      <td>0.427</td>\n",
        "      <td>9.8</td>\n",
        "      <td>Sub_Sahara</td>\n",
@@ -499,10 +489,9 @@
        "      <th>2927</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Developing</td>\n",
        "      <td>46.0</td>\n",
        "      <td>665.0</td>\n",
-       "      <td>24</td>\n",
        "      <td>1.68</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1483</td>\n",
@@ -513,7 +502,6 @@
        "      <td>78.0</td>\n",
        "      <td>43.5</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>11.2</td>\n",
        "      <td>0.434</td>\n",
        "      <td>9.8</td>\n",
        "      <td>Sub_Sahara</td>\n",
@@ -523,36 +511,36 @@
        "</div>"
       ],
       "text/plain": [
-       "       Country  Year  Status  LifeExpectancy  AdultMort  InfD  EtOH  \\\n",
-       "2923  Zimbabwe  2004       0            44.3      723.0    27  4.36   \n",
-       "2924  Zimbabwe  2003       0            44.5      715.0    26  4.06   \n",
-       "2925  Zimbabwe  2002       0            44.8       73.0    25  4.43   \n",
-       "2926  Zimbabwe  2001       0            45.3      686.0    25  1.72   \n",
-       "2927  Zimbabwe  2000       0            46.0      665.0    24  1.68   \n",
+       "       Country  Year      Status  LifeExpectancy  AdultMort  EtOH  PercExpen  \\\n",
+       "2923  Zimbabwe  2004  Developing            44.3      723.0  4.36        0.0   \n",
+       "2924  Zimbabwe  2003  Developing            44.5      715.0  4.06        0.0   \n",
+       "2925  Zimbabwe  2002  Developing            44.8       73.0  4.43        0.0   \n",
+       "2926  Zimbabwe  2001  Developing            45.3      686.0  1.72        0.0   \n",
+       "2927  Zimbabwe  2000  Developing            46.0      665.0  1.68        0.0   \n",
        "\n",
-       "      PercExpen  Measles   BMI  lt5yD  Polio  TotalExpen   DTP   HIV  \\\n",
-       "2923        0.0       31  27.1     42   67.0        7.13  65.0  33.6   \n",
-       "2924        0.0      998  26.7     41    7.0        6.52  68.0  36.7   \n",
-       "2925        0.0      304  26.3     40   73.0        6.53  71.0  39.8   \n",
-       "2926        0.0      529  25.9     39   76.0        6.16  75.0  42.1   \n",
-       "2927        0.0     1483  25.5     39   78.0        7.10  78.0  43.5   \n",
+       "      Measles   BMI  lt5yD  Polio  TotalExpen   DTP   HIV  Thin1_19y  Income  \\\n",
+       "2923       31  27.1     42   67.0        7.13  65.0  33.6        9.4   0.407   \n",
+       "2924      998  26.7     41    7.0        6.52  68.0  36.7        9.8   0.418   \n",
+       "2925      304  26.3     40   73.0        6.53  71.0  39.8        1.2   0.427   \n",
+       "2926      529  25.9     39   76.0        6.16  75.0  42.1        1.6   0.427   \n",
+       "2927     1483  25.5     39   78.0        7.10  78.0  43.5       11.0   0.434   \n",
        "\n",
-       "      Thin1_19y  Thin5_9y  Income  Education      Region  \n",
-       "2923        9.4       9.4   0.407        9.2  Sub_Sahara  \n",
-       "2924        9.8       9.9   0.418        9.5  Sub_Sahara  \n",
-       "2925        1.2       1.3   0.427       10.0  Sub_Sahara  \n",
-       "2926        1.6       1.7   0.427        9.8  Sub_Sahara  \n",
-       "2927       11.0      11.2   0.434        9.8  Sub_Sahara  "
+       "      Education      Region  \n",
+       "2923        9.2  Sub_Sahara  \n",
+       "2924        9.5  Sub_Sahara  \n",
+       "2925       10.0  Sub_Sahara  \n",
+       "2926        9.8  Sub_Sahara  \n",
+       "2927        9.8  Sub_Sahara  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "path = '../data/processed/'\n",
-    "filename = 'Clean_LE_Regions.csv'\n",
+    "filename = 'Clean_LE_Regions_3.csv'\n",
     "\n",
     "df.to_csv(path+filename, index=False)\n",
     "\n",
