--- a/notebooks/3_What exactly is missing from life expectancy data.ipynb
+++ b/notebooks/3_What exactly is missing from life expectancy data.ipynb
@@ -31,11 +31,11 @@
     "\n",
     "**Executive Summary**\n",
     "\n",
-    "- The `Life_Expectancy_Data.csv` orginal dataset displayed **193 unique country names**.  \n",
+    "- The orginal dataset, `Life_Expectancy_Data.csv`, displayed **193 unique nations**.  \n",
     "\n",
-    "- **10 countries had only one entry each. These 10 countries had ONLY the year = 2013**.  \n",
+    "- However, 10 countries had only one entry each. These 10 countries had ONLY the year = 2013.  \n",
     "\n",
-    "- Therefore the cleaned dataset has **183 'usable' countries**.\n",
+    "- Therefore the cleaned dataset and analysis has **183 usable countries**.\n",
     "\n",
     "---"
    ]
@@ -48,8 +48,7 @@
    "source": [
     "### NOTE 1:\n",
     " \n",
-    "- It is **reasonable to delete the ten countries which make up ten rows.**  \n",
-    "- It appears that **no other countries have missing values.**  "
+    "- I will not impute data for the missing 10 nations. Therefore it is reasonable to delete the ten countries which make up ten rows.  "
    ]
   },
   {
