--- a/notebooks/2_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Initial_Data_Analysis.ipynb
@@ -28,7 +28,7 @@
     "Any background\n",
     "\n",
     "\n",
-    "Purpose: This notebook investigates *missing values, renames features, and imputes missing values by column mean*.\n",
+    "Purpose: This notebook investigates *missing values, imputing any missing values by column mean*.\n",
     "\n",
     "Input: `Life_Expectancy_Data.csv`\n",
     "\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "656d8c75",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "06115e7f",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "(2938, 22)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4cab4dae",
    "metadata": {
     "scrolled": false
@@ -115,6 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "======================================\n",
+      "Shape: (2938, 22)\n",
       "======================================\n",
       "Column              No. missing values\n",
       "======================================\n"
@@ -148,12 +150,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print('='*38)\n",
+    "print('Shape:',df.shape)\n",
     "print('='*38)\n",
     "print('Column              No. missing values')\n",
     "print('='*38)\n",
@@ -178,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bf72eff3",
    "metadata": {},
    "outputs": [],
@@ -188,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "d0e4a1bd",
    "metadata": {},
    "outputs": [
@@ -196,47 +200,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Dataframe shape: (2928, 22)\n"
+      "======================================\n",
+      "Shape: (2928, 22)\n",
+      "======================================\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Country             0\n",
-       "Year                0\n",
-       "Status              0\n",
-       "LifeExpectancy      0\n",
-       "AdultMort           0\n",
-       "InfD                0\n",
-       "EtOH              193\n",
-       "PercExpen           0\n",
-       "HepB              553\n",
-       "Measles             0\n",
-       "BMI                32\n",
-       "lt5yD               0\n",
-       "Polio              19\n",
-       "TotalExpen        226\n",
-       "DTP                19\n",
-       "HIV                 0\n",
-       "GDP               443\n",
-       "Population        644\n",
-       "Thin1_19y          32\n",
-       "Thin5_9y           32\n",
-       "Income            160\n",
-       "Education         160\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('\\nDataframe shape:', df.shape)\n",
-    "\n",
-    "df.isnull().sum()"
+    "print('='*38)\n",
+    "print('Shape:',df.shape)\n",
+    "print('='*38)"
    ]
   },
   {
@@ -307,11 +280,7 @@
     "df['Thin1_19y'].fillna(np.mean(df.Thin1_19y), inplace=True)\n",
     "df['Thin5_9y'].fillna(np.mean(df.Thin5_9y), inplace=True)\n",
     "df['Income'].fillna(np.mean(df.Income), inplace=True)\n",
-    "df['Education'].fillna(np.mean(df.Education), inplace=True)\n",
-    "\n",
-    "# REFACTORED to use original strings for status\n",
-    "# Convert Dev status to a binary variable, where Developing Nations = 0, Developed Nation status = 1.\n",
-    "# df['Status'] = df['Status'].apply(lambda x: 0 if x == 'Developing' else 1).astype('category')"
+    "df['Education'].fillna(np.mean(df.Education), inplace=True)"
    ]
   },
   {
